crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__tea_shop__missing_tyle_enum-graph.snap
---
source: crates/engine/query-solver/src/tests/tea_shop.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Query.recommendedTeas\" ]\n    2 [ label = \"Query.teaWithInaccessibleStyle\" ]\n    3 [ label = \"StyleContainer.name\" ]\n    4 [ label = \"StyleContainer.style\" ]\n    5 [ label = \"Tea.id\" ]\n    6 [ label = \"Tea.name\" ]\n    7 [ label = \"Tea.style\" ]\n    8 [ label = \"Root#tea-shop\", shape=parallelogram, color=dodgerblue ]\n    9 [ label = \"recommendedTeas#tea-shop\", shape=box, color=dodgerblue ]\n    10 [ label = \"id#tea-shop\", shape=box, color=dodgerblue ]\n    11 [ label = \"name#tea-shop\", shape=box, color=dodgerblue ]\n    12 [ label = \"style#tea-shop\", shape=box, color=dodgerblue ]\n    13 [ label = \"teaWithInaccessibleStyle#tea-shop\", shape=box, color=dodgerblue ]\n    14 [ label = \"name#tea-shop\", shape=box, color=dodgerblue ]\n    15 [ label = \"style#tea-shop\", shape=box, color=dodgerblue ]\n    0 -> 1 [ label = \"\" ]\n    0 -> 2 [ label = \"\" ]\n    2 -> 3 [ label = \"\" ]\n    2 -> 4 [ label = \"\" ]\n    1 -> 5 [ label = \"\" ]\n    1 -> 6 [ label = \"\" ]\n    1 -> 7 [ label = \"\" ]\n    0 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    0 -> 8 [ label = \"\", style=dashed,arrowhead=none ]\n    8 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    9 -> 1 [ label = \"\", color=violet,arrowhead=none ]\n    9 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    10 -> 5 [ label = \"\", color=violet,arrowhead=none ]\n    9 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    11 -> 6 [ label = \"\", color=violet,arrowhead=none ]\n    9 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    12 -> 7 [ label = \"\", color=violet,arrowhead=none ]\n    8 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    13 -> 2 [ label = \"\", color=violet,arrowhead=none ]\n    13 -> 14 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    14 -> 3 [ label = \"\", color=violet,arrowhead=none ]\n    13 -> 15 [ label = \"\", color=royalblue,fontcolor=royalblue ]\n    15 -> 4 [ label = \"\", color=violet,arrowhead=none ]\n}\n"
---
digraph {
    0 [ root]
    1 [ Query.recommendedTeas]
    2 [ Query.teaWithInaccessibleStyle]
    3 [ StyleContainer.name]
    4 [ StyleContainer.style]
    5 [ Tea.id]
    6 [ Tea.name]
    7 [ Tea.style]
    8 [ Root#tea-shop]
    9 [ recommendedTeas#tea-shop]
    10 [ id#tea-shop]
    11 [ name#tea-shop]
    12 [ style#tea-shop]
    13 [ teaWithInaccessibleStyle#tea-shop]
    14 [ name#tea-shop]
    15 [ style#tea-shop]
    0 -> 1 [ label = "Field" ]
    0 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    2 -> 4 [ label = "Field" ]
    1 -> 5 [ label = "Field" ]
    1 -> 6 [ label = "Field" ]
    1 -> 7 [ label = "Field" ]
    0 -> 8 [ label = "CreateChildResolver" ]
    0 -> 8 [ label = "HasChildResolver" ]
    8 -> 9 [ label = "CanProvide" ]
    9 -> 1 [ label = "Provides" ]
    9 -> 10 [ label = "CanProvide" ]
    10 -> 5 [ label = "Provides" ]
    9 -> 11 [ label = "CanProvide" ]
    11 -> 6 [ label = "Provides" ]
    9 -> 12 [ label = "CanProvide" ]
    12 -> 7 [ label = "Provides" ]
    8 -> 13 [ label = "CanProvide" ]
    13 -> 2 [ label = "Provides" ]
    13 -> 14 [ label = "CanProvide" ]
    14 -> 3 [ label = "Provides" ]
    13 -> 15 [ label = "CanProvide" ]
    15 -> 4 [ label = "Provides" ]
}
