crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__tea_shop__missing_tyle_enum-partial-solution.snap
---
source: crates/engine/query-solver/src/tests/tea_shop.rs
expression: "digraph {\n    0 [ label = \"root\" ]\n    1 [ label = \"Root#tea-shop\", color=royalblue,shape=parallelogram ]\n    2 [ label = \"Query.teaWithInaccessibleStyle\" ]\n    3 [ label = \"StyleContainer.style\" ]\n    4 [ label = \"StyleContainer.name\" ]\n    5 [ label = \"Query.recommendedTeas\" ]\n    6 [ label = \"Tea.style\" ]\n    7 [ label = \"Tea.name\" ]\n    8 [ label = \"Tea.id\" ]\n    0 -> 1 [ color=royalblue,fontcolor=royalblue ]\n    1 -> 2 [  ]\n    2 -> 3 [  ]\n    2 -> 4 [  ]\n    1 -> 5 [  ]\n    5 -> 6 [  ]\n    5 -> 7 [  ]\n    5 -> 8 [  ]\n}\n"
---
digraph {
    0 [ label = "root" ]
    1 [ label = "Root#tea-shop" ]
    2 [ label = "Query.teaWithInaccessibleStyle" ]
    3 [ label = "StyleContainer.style" ]
    4 [ label = "StyleContainer.name" ]
    5 [ label = "Query.recommendedTeas" ]
    6 [ label = "Tea.style" ]
    7 [ label = "Tea.name" ]
    8 [ label = "Tea.id" ]
    0 -> 1 [ label = "QueryPartition" ]
    1 -> 2 [ label = "Field" ]
    2 -> 3 [ label = "Field" ]
    2 -> 4 [ label = "Field" ]
    1 -> 5 [ label = "Field" ]
    5 -> 6 [ label = "Field" ]
    5 -> 7 [ label = "Field" ]
    5 -> 8 [ label = "Field" ]
}
