crates/engine/query-solver/src/tests/snapshots/engine_query_solver__tests__tea_shop__missing_tyle_enum-solver.snap
---
source: crates/engine/query-solver/src/tests/tea_shop.rs
expression: "digraph {\n    0 [ label = \"root\", color=forestgreen ]\n    1 [ label = \"StyleContainer.name\", style=dashed ]\n    2 [ label = \"StyleContainer.style\", style=dashed ]\n    3 [ label = \"Tea.id\", style=dashed ]\n    4 [ label = \"Tea.name\", style=dashed ]\n    5 [ label = \"Tea.style\", style=dashed ]\n    6 [ label = \"Root#tea-shop\", shape=parallelogram, color=dodgerblue, style=dashed ]\n    7 [ label = \"recommendedTeas#tea-shop\", shape=box, color=dodgerblue, style=dashed ]\n    8 [ label = \"id#tea-shop\", shape=box, color=dodgerblue, style=dashed ]\n    9 [ label = \"name#tea-shop\", shape=box, color=dodgerblue, style=dashed ]\n    10 [ label = \"style#tea-shop\", shape=box, color=dodgerblue, style=dashed ]\n    11 [ label = \"teaWithInaccessibleStyle#tea-shop\", shape=box, color=dodgerblue, style=dashed ]\n    12 [ label = \"name#tea-shop\", shape=box, color=dodgerblue, style=dashed ]\n    13 [ label = \"style#tea-shop\", shape=box, color=dodgerblue, style=dashed ]\n    14 [ label=\"\", style=dashed]\n    0 -> 6 [ label = <<b>1</b>>, color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 7 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 8 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    8 -> 3 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 9 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    9 -> 4 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    7 -> 10 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    10 -> 5 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    6 -> 11 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 12 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    12 -> 1 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    11 -> 13 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    13 -> 2 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n    14 -> 0 [ label = \"\", color=royalblue,fontcolor=royalblue,style=dashed ]\n}\n"
---
digraph {
    0 [ label = "root", steiner=1 ]
    1 [ label = "StyleContainer.name", steiner=0 ]
    2 [ label = "StyleContainer.style", steiner=0 ]
    3 [ label = "Tea.id", steiner=0 ]
    4 [ label = "Tea.name", steiner=0 ]
    5 [ label = "Tea.style", steiner=0 ]
    6 [ label = "Root#tea-shop", steiner=0 ]
    7 [ label = "recommendedTeas#tea-shop", steiner=0 ]
    8 [ label = "id#tea-shop", steiner=0 ]
    9 [ label = "name#tea-shop", steiner=0 ]
    10 [ label = "style#tea-shop", steiner=0 ]
    11 [ label = "teaWithInaccessibleStyle#tea-shop", steiner=0 ]
    12 [ label = "name#tea-shop", steiner=0 ]
    13 [ label = "style#tea-shop", steiner=0 ]
    14 [ label="", style=dashed]
    0 -> 6 [ cost=1, steiner=0]
    6 -> 7 [ cost=0, steiner=0]
    7 -> 8 [ cost=0, steiner=0]
    8 -> 3 [ cost=0, steiner=0]
    7 -> 9 [ cost=0, steiner=0]
    9 -> 4 [ cost=0, steiner=0]
    7 -> 10 [ cost=0, steiner=0]
    10 -> 5 [ cost=0, steiner=0]
    6 -> 11 [ cost=0, steiner=0]
    11 -> 12 [ cost=0, steiner=0]
    12 -> 1 [ cost=0, steiner=0]
    11 -> 13 [ cost=0, steiner=0]
    13 -> 2 [ cost=0, steiner=0]
    14 -> 0 [ cost=0, steiner=0]
}
